--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,12 @@ workflows:
           exclude: SC2148,SC2038,SC2086,SC2002,SC2016
           filters: *filters
       - orb-tools/publish:
-          orb-name: circleci/terraform
+          orb-name: yoheikoyama/terraform
           vcs-type: << pipeline.project.type >>
           requires:
             [orb-tools/lint, orb-tools/review, orb-tools/pack, shellcheck/check]
           # Use a context to hold your publishing token.
-          context: orb-publisher
+          context: orb-publishing
           github-token: GHI_TOKEN
           filters: *filters
       # Triggers the next workflow in the Orb Development Kit.
